--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -128,11 +128,13 @@ workflows:
     jobs:
       - test_classification_model
       - test_ml_api
-      - differential_tests
       - train_and_upload_classification_model:
           requires:
             - test_classification_model
             - test_ml_api
-            - differential_tests
+      - differential_tests:
+          requires:
+            - train_and_upload_classification_model
+
 
 
