--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,2 @@
--r packages/ml_api/requirements.txt
+-i https://pypi.org/simple -r packages/ml_api/requirements.txt
+-r packages/ml_api/requirementsaws.tx
