--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,3 @@
--r packages/classification_model/requirements.txt
--r packages/ml_api/requirements.txt
--e packages/classification_model
+pip -i https://pypi.org/simple -r packages/classification_model/requirements.txt
+pip -i https://pypi.org/simple -r packages/ml_api/requirements.txt
+pip install -r packages/ml_api/requirementsaws.txt
