--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,3 @@
 -i https://pypi.org/simple -r packages/classification_model/requirements.txt
 -i https://pypi.org/simple -r packages/ml_api/requirements.txt
--r packages/ml_api/requirementsaws.txt
+-e packages/classification-model
