--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,3 @@
 -r packages/classification_model/requirements.txt
 -r packages/ml_api/requirements.txt
--e packages/classification-model/
+config set global.index-url https://aws:$CODEARTIFACT_AUTH_TOKEN@packages-156062350977.d.codeartifact.us-east-1.amazonaws.com/pypi/classification-model-package/simple/
