--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
 -r packages/classification_model/requirements.txt
 -r packages/ml_api/requirements.txt
 config set global.index-url https://aws:$CODEARTIFACT_AUTH_TOKEN@packages-156062350977.d.codeartifact.us-east-1.amazonaws.com/pypi/classification-model-package/simple/
+classification-model==0.1.0 --no-cache-dir
